# asset-tools

./: .gitignore  pyproject.toml  todo.md
api/: models.py  serializers.py  urls.py  views.py
api/tests/: get_printers_test.py  print_test.py  printer_model_test.py
core/: env.py  logging.py  settings.py  urls.py
download/: urls.py  views.py
frontend/: .gitignore  .prettierrc.json  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  permissions.ts  router.tsx
frontend/src/components/: navBar.tsx  spinner.tsx
frontend/src/components/index/: button.tsx
frontend/src/components/it-invent/: data.ts  table.tsx  test.ts
frontend/src/components/navBar/: navBar.tsx
frontend/src/components/notifications/: alertWithButton.tsx  allGood.tsx
frontend/src/pages/: 401.tsx  index.tsx  it-invent.tsx  it_invent.tsx  mobile.tsx  printers.tsx
frontend/src/pages/index/: button.tsx  index.tsx
frontend/src/pages/invent-notify/: notify.tsx
frontend/src/pages/it-invent/: data.ts  it-invent.tsx  notify.tsx  reportTable.tsx  table.tsx  test.ts
mars/: apps.py  models.py  premissions.py  urls.py  views.py
mars/backend/: mars.py
mars/tests/: test_models.py
mars/views/: _doc.md  base.py  inventory.py  it.py  mobile.py
print_service/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
print_service/tests/: tests_model.py  tests_print.py
users/: IDAM.py  permissions.py  tests.py  urls.py  views.py
utils/: tests.py  urls.py  views.py
utils/templates/utils/: takeback.html
web/: tests.py  urls.py  views.py
(+3 files in other folders)
