[tool.poetry]
name = "asset-tool"
version = "0.1.0"
description = ""
authors = ["Inasu <just.me.juncy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
djangorestframework = "^3.15.1"
celery = "^5.4.0"
django-cors-headers = "^4.3.1"
requests = "^2.32.3"
logging = "^0.4.9.6"
python-dotenv = "^1.0.1"
jwt = "^1.3.1"
xhtml2pdf = "^0.2.16"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [".venv", "venv"]
indent-width = 4

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
